logs/dag_id=a_third_dag/run_id=manual__2022-11-10T18:06:50.574367+00:00/task_id=create_table/attempt=1.log
[2022-11-10T18:06:57.039+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: a_third_dag.create_table manual__2022-11-10T18:06:50.574367+00:00 [queued]>
[2022-11-10T18:06:57.090+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: a_third_dag.create_table manual__2022-11-10T18:06:50.574367+00:00 [queued]>
[2022-11-10T18:06:57.096+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2022-11-10T18:06:57.099+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 1
[2022-11-10T18:06:57.100+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2022-11-10T18:06:57.129+0000] {taskinstance.py:1383} INFO - Executing <Task(PostgresOperator): create_table> on 2022-11-10 18:06:50.574367+00:00
[2022-11-10T18:06:57.153+0000] {standard_task_runner.py:55} INFO - Started process 10375 to run task
[2022-11-10T18:06:57.174+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'a_third_dag', 'create_table', 'manual__2022-11-10T18:06:50.574367+00:00', '--job-id', '46', '--raw', '--subdir', 'DAGS_FOLDER/third_dug.py', '--cfg-path', '/tmp/tmpb_scof5m']
[2022-11-10T18:06:57.196+0000] {standard_task_runner.py:83} INFO - Job 46: Subtask create_table
[2022-11-10T18:06:57.280+0000] {task_command.py:376} INFO - Running <TaskInstance: a_third_dag.create_table manual__2022-11-10T18:06:50.574367+00:00 [running]> on host 0b03955da713
[2022-11-10T18:06:57.346+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=a_third_dag
AIRFLOW_CTX_TASK_ID=create_table
AIRFLOW_CTX_EXECUTION_DATE=2022-11-10T18:06:50.574367+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-11-10T18:06:50.574367+00:00
[2022-11-10T18:06:57.358+0000] {base.py:71} INFO - Using connection ID '***' for task execution.
[2022-11-10T18:06:57.367+0000] {sql.py:315} INFO - Running statement: 
            CREATE TABLE IF NOT EXISTS pet (
            pet_id SERIAL PRIMARY KEY,
            date CURRENT_TIMESTAMP(),
            price NUMERIC NOT NULL,
            pair VARCHAR NOT NULL,
            );
          , parameters: None
[2022-11-10T18:06:57.372+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 94, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "CURRENT_TIMESTAMP"
LINE 4:             date CURRENT_TIMESTAMP(),
                         ^

[2022-11-10T18:06:57.390+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=a_third_dag, task_id=create_table, execution_date=20221110T180650, start_date=20221110T180657, end_date=20221110T180657
[2022-11-10T18:06:57.403+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 46 for task create_table (syntax error at or near "CURRENT_TIMESTAMP"
LINE 4:             date CURRENT_TIMESTAMP(),
                         ^
; 10375)
[2022-11-10T18:06:57.455+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2022-11-10T18:06:57.474+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
